--- a/WarehouseControl/appsettings.json
+++ b/WarehouseControl/appsettings.json
@@ -1,8 +1,13 @@
 ﻿{
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  }
+    "Logging": {
+        "IncludeScopes": false,
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "Data": {
+      "WarehouseControlShops": {
+          "ConnectionString":  "Server=(localdb)\\MSSQLLocalDB;Database=WarehouseControl;Trusted_Connection=True;MultipleActiveResultSets=true" 
+      } 
+    } 
 }
